--- a/Progetto_JAVA/pom.xml
+++ b/Progetto_JAVA/pom.xml
@@ -42,6 +42,13 @@
         </dependency>
 
 
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version>
+        </dependency>
+
 
 
         <!--TEST -->
