--- a/Progetto_JAVA/src/main/resources/Application.properties
+++ b/Progetto_JAVA/src/main/resources/Application.properties
@@ -1,13 +1,13 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/progettoIDS
 spring.datasource.username=postgres
 spring.datasource.password=database
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-
+server.error.include-message=always
 
 
