--- a/Progetto_JAVA/src/main/resources/Application.properties
+++ b/Progetto_JAVA/src/main/resources/Application.properties
@@ -10,4 +10,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.error.include-message=always
 
+logging.level.org.springframework.security=DEBUG
+
+
 
