--- a/Progetto_JAVA/pom.xml
+++ b/Progetto_JAVA/pom.xml
@@ -21,8 +21,6 @@
         <relativePath/>
     </parent>
 
-
-
     <dependencies>
         <!--SPRINGBOOT-->
         <dependency>
@@ -54,10 +52,6 @@
             <version>42.7.3</version>
         </dependency>
 
-
-
-
-
         <!--TEST -->
         <dependency>
             <groupId>junit</groupId>
@@ -77,7 +71,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
@@ -87,7 +81,17 @@
             <version>6.3.3</version>
         </dependency>
 
-
+        <!--Logger-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.5</version>
+        </dependency>
 
         <!--TOKEN JWT-->
         <dependency>
@@ -105,10 +109,6 @@
             <artifactId>jjwt-jackson</artifactId> <!-- oppure jjwt-gson se usi Gson -->
             <version>0.11.5</version>
         </dependency>
-
-
-
-
 
     </dependencies>
 </project>
