--- a/Progetto_JAVA/pom.xml
+++ b/Progetto_JAVA/pom.xml
@@ -111,6 +111,16 @@
         </dependency>
 
 
+        <!-- OpenStreetMap -->
+        <!-- Apache HttpClient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
+
+
 
     </dependencies>
 </project>
